--- a/Projeto-Formulario/style.css
+++ b/Projeto-Formulario/style.css
@@ -19,7 +19,7 @@ body {
   bottom: 100px;
   margin-left: auto;
   margin-right: auto;
-  height: 1500px;
+  height: 1350px;
   width: 900px;
   background-color: white;
   box-sizing: border-box;
@@ -59,15 +59,6 @@ input {
   margin-bottom: 40px;
 }
 
-input:not([type="radio"]) {
-  font-size: 15px;
-  width: 450px;
-  padding: 10px 0;
-  border: none;
-  border-bottom: 1px solid rgb(223, 223, 223);
-  margin-bottom: 40px;
-}
-
 .asterisco {
   color: red;
 }
@@ -95,6 +86,19 @@ textarea {
 
 .opcao-check-box label,
 .opcao-check-box input {
-  margin: 0;
-  padding: 0;
+  display: inline-block;
+}
+
+.opcao-check-box {
+}
+
+.foto label {
+  margin-bottom: 20px;
+}
+
+.cadastrar input {
+  width: 170px;
+  height: 60px;
+  background-color: rgb(102, 49, 187);
+  color: white;
 }
