--- a/Projeto-HdcHost/teste.css
+++ b/Projeto-HdcHost/teste.css
@@ -1,4 +1,5 @@
 * {
+  font-family: Arial, Helvetica, sans-serif;
   padding: 0;
   margin: 0;
 }
@@ -15,14 +16,21 @@ header {
 .navbar-container a {
   color: white;
   text-decoration: none;
-  font-size: 25px;
+  font-size: 15px;
+  text-transform: uppercase;
 }
 
 li {
   list-style: none;
-  padding: 10px;
+  padding: 0 10px;
 }
 
 .navbar-container ul {
   display: flex;
+}
+
+.navbar-container {
+  display: flex;
+  justify-content: end;
+  height: 80px;
 }
